exports[`test ButtonThemeAction 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Action
</button>
`;

exports[`test ButtonThemeLink 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Action
</button>
`;

exports[`test ButtonThemeNormal 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Normal
</button>
`;

exports[`test Check 1`] = `
<span
  className="wrapper"
  onChange={undefined}>
  <input
    checked={undefined}
    className="native"
    defaultChecked={undefined}
    disabled={undefined}
    id="checks-id"
    name="check-control"
    onChange={[Function]}
    type="checkbox"
    value={undefined} />
  <label
    className="control"
    htmlFor="checks-id" />
  <label
    className="label"
    htmlFor="checks-id">
    checks label
  </label>
</span>
`;

exports[`test Radio 1`] = `
<div
  className="container"
  id={undefined}
  onChange={undefined}>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime2"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="ducati" />
    <label
      className="control"
      htmlFor="_teatime2" />
    <label
      className="label"
      htmlFor="_teatime2">
      Ducati
    </label>
  </span>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime3"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="honda" />
    <label
      className="control"
      htmlFor="_teatime3" />
    <label
      className="label"
      htmlFor="_teatime3">
      Honda
    </label>
  </span>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime4"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="jawa" />
    <label
      className="control"
      htmlFor="_teatime4" />
    <label
      className="label"
      htmlFor="_teatime4">
      Jawa
    </label>
  </span>
</div>
`;

exports[`test RadioButton 1`] = `
<div
  className="container"
  id={undefined}
  onChange={undefined}>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime6"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="ducati" />
    <label
      className="control"
      htmlFor="_teatime6">
      Ducati
    </label>
  </span>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime7"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="honda" />
    <label
      className="control"
      htmlFor="_teatime7">
      Honda
    </label>
  </span>
  <span
    className="wrapper">
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime8"
      name="radio-control"
      onChange={[Function]}
      type="radio"
      value="jawa" />
    <label
      className="control"
      htmlFor="_teatime8">
      Jawa
    </label>
  </span>
</div>
`;

exports[`test Select 1`] = `
<span
  className="wrapper"
  onChange={undefined}>
  <input
    disabled={undefined}
    id={undefined}
    name="select-control"
    type="hidden"
    value="jawa" />
  <span
    className="baseline">
    <button
      className="control"
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}>
      Jawa
    </button>
    <i
      className="arrow"
      onClick={[Function]} />
  </span>
  <div
    className="menu isClosedMenu" />
</span>
`;

exports[`test SelectSearchable 1`] = `
<span
  className="wrapper"
  onChange={undefined}>
  <input
    disabled={undefined}
    id={undefined}
    name="select-control"
    type="hidden"
    value="jawa" />
  <span
    className="baseline">
    <input
      className="search isPseudoFocusedSearch"
      disabled={undefined}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value="" />
    <span
      className="control"
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}>
      Jawa
    </span>
    <i
      className="arrow"
      onClick={[Function]} />
  </span>
  <div
    className="menu isClosedMenu" />
</span>
`;
